--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animated Background with Buttons</title>
+  <title>Dhanush portfolio</title>
   <style>
     body {
       display: flex;
@@ -74,6 +74,7 @@
 
 </body>
 </html>
+
 
 
 
