--- a/education.html
+++ b/education.html
@@ -162,4 +162,96 @@
   </div>
 
 </body>
+<footer>
+  <div class="social-icons">
+    <a href="https://facebook.com/Dhanush Vanama" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg" alt="Facebook">
+    </a>
+    <a href="https://instagram.com/_vanama_dhanush_" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+    </a>
+    <a href="https://www.linkedin.com/in/virat-kohli-undefined-9347a6387?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BguTpmtccRAq2Z5G5tn3Rvg%3D%3D" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
+    </a>
+    <a href="https://twitter.com/@Dhanush_Vanama" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg" alt="Twitter">
+    </a>
+    <a href="https://github.com/WorkWithDhanush" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+    </a>
+  </div>
+  <p>© 2025 Dhanush Vanama | All Rights Reserved</p>
+</footer>
+
+<style>
+  footer {
+    margin-top: 50px;
+    background: #1e293b;
+    padding: 20px;
+    text-align: center;
+    border-top: 2px solid #38bdf8;
+  }
+
+  .social-icons {
+    margin-bottom: 10px;
+  }
+
+  .social-icons a {
+    margin: 0 12px;
+    display: inline-block;
+  }
+
+  .social-icons img {
+    width: 32px;
+    height: 32px;
+    transition: transform 0.3s ease, filter 0.3s ease;
+  }
+
+  .social-icons img:hover {
+    transform: scale(1.2);
+    filter: brightness(1.2);
+  }
+
+  footer p {
+    font-size: 0.9rem;
+    color: #94a3b8;
+  }
+</style>
+
+<style>
+  footer {
+    margin-top: 50px;
+    background: #1e293b;
+    padding: 20px;
+    text-align: center;
+    border-top: 2px solid #38bdf8;
+  }
+
+  .social-icons {
+    margin-bottom: 10px;
+  }
+
+  .social-icons a {
+    margin: 0 12px;
+    display: inline-block;
+  }
+
+  .social-icons img {
+    width: 32px;
+    height: 32px;
+    transition: transform 0.3s ease, filter 0.3s ease;
+  }
+
+  .social-icons img:hover {
+    transform: scale(1.2);
+    filter: brightness(1.2);
+  }
+
+  footer p {
+    font-size: 0.9rem;
+    color: #94a3b8;
+  }
+</style>
+
+
 </html>
