--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
     </div>
 
     <!-- Project 2 -->
-    <div class="card" onclick="window.open('https://dhanush-coder-2007.github.io/vanamas-website/cssproject', '_blank')">
+    <div class="card" onclick="window.open('https://workwithdhanush.github.io/Dhanush_vanama/cssproject', '_blank')">
       <img src="rockpaperscissor.jpg" alt="Rock Paper Scissor">
       <div class="card-content">
         <div class="tags">
@@ -113,3 +113,4 @@
 
 </body>
 </html>
+
