--- a/cssproject.html
+++ b/cssproject.html
@@ -49,9 +49,9 @@ cursor: pointer;
 
     <h1 class="text">Play Rock Paper Scissors with the Computer</h1>
     
-    <button onclick="player('rock')" class="fulo"><img src="photos/rock-emoji.png" alt=""  class="rock"></button>
-    <button onclick="player('paper')" class="fulo"><img src="photos/paper-emoji.png" alt="" class="rock"></button>
-    <button onclick="player('scissors')" class="fulo"><img src="photos/scissors-emoji.png" alt="" class="rock"></button>
+    <button onclick="player('rock')" class="fulo"><img src="https://i.postimg.cc/rpXRmbNY/rock-emoji.png" alt=""  class="rock"></button>
+    <button onclick="player('paper')" class="fulo"><img src="https://i.postimg.cc/wjSLN3gQ/paper-emoji.png" alt="" class="rock"></button>
+    <button onclick="player('scissors')" class="fulo"><img src="https://i.postimg.cc/4NjmLMqC/scissors-emoji.png" alt="" class="rock"></button>
 
     
    
@@ -135,3 +135,4 @@ function resetScore(){
 
 </body>
 </html>
+
