Add ECE department link to branch.html
Added Electronics & Communication Engineering department link.

--- a/branch.html
+++ b/branch.html
@@ -94,6 +94,12 @@
       <h5>Computer Science & Engineering (CSE)</h5>
       <p>Open SGPA / CGPA Calculator</p>
     </a>
+
+    <!-- ECE Department -->
+    <a href="ecemain.html" class="dept-card">
+      <h5>Electronics & Communication Engineering (ECE)</h5>
+      <p>Open SGPA / CGPA Calculator</p>
+    </a>
   </div>
 
   <footer>
@@ -102,3 +108,5 @@
 
 </body>
 </html>
+
+
