--- a/branch.html
+++ b/branch.html
@@ -96,7 +96,7 @@
     </a>
 
     <!-- ECE Department -->
-    <a href="ecemain.html" class="dept-card">
+    <a href="emain.html" class="dept-card">
       <h5>Electronics & Communication Engineering (ECE)</h5>
       <p>Open SGPA / CGPA Calculator</p>
     </a>
@@ -108,5 +108,6 @@
 
 </body>
 </html>
+
 
 
