Fix HTML formatting and update department links

--- a/branch.html
+++ b/branch.html
@@ -96,7 +96,7 @@
     </a>
 
     <!-- ECE Department -->
-    <a href="emain.html" class="dept-card">
+    <a href="ecemain.html" class="dept-card">
       <h5>Electronics & Communication Engineering (ECE)</h5>
       <p>Open SGPA / CGPA Calculator</p>
     </a>
@@ -108,6 +108,7 @@
 
 </body>
 </html>
+
 
 
 
