--- a/branch.html
+++ b/branch.html
@@ -100,6 +100,11 @@
       <h5>Electronics & Communication Engineering (ECE)</h5>
       <p>Open SGPA / CGPA Calculator</p>
     </a>
+     <!-- CSD Department -->
+    <a href="cdmain.html" class="dept-card">
+      <h5>Department of Data Science (CSD)</h5>
+      <p>Open SGPA / CGPA Calculator</p>
+    </a>
   </div>
 
   <footer>
@@ -108,6 +113,7 @@
 
 </body>
 </html>
+
 
 
 
